syntax = "proto3";

package scrayosnet.passage.adapter;

import "adapter/adapter.proto";

service Strategy {
    rpc SelectTarget(SelectRequest) returns (SelectResponse);
}

message SelectRequest {
    Address client_address = 1;
    Address server_address = 2;
    uint64 protocol = 3;
    string username = 4;
    string user_id = 5;
    repeated Target targets = 6;
}

message SelectResponse {
    optional Target target = 1;
}
